<resources>
    <string name="app_name">My Little Helper</string>
    <string name="button_feed">Feeding</string>
    <string name="button_view_log">View Logs</string>
    <string name="button_breast">Breast</string>
    <string name="button_formula">Formula</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>
    <string name="button_diaper">Diaper</string>
    <string name="button_profile">Profile</string>
    <string name="main_header_what">What are we recording?</string>
    <string name="set_image">Set Image</string>
    <string name="content_desc_image_view">an image chosen by the user</string>
    <string name="button_edit">Edit</string>
    <string name="text_age">Age</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logs">Logs</string>
    <string name="menu_baby">Baby</string>

</resources>
